--- a/backend/public/css/master.css
+++ b/backend/public/css/master.css
@@ -1,3 +1,68 @@
-h1 {
-  color: aqua;
+.c-form {
+  padding: 20px;
+  width: 500px;
+  border-radius: 3px;
+  background: #FFF;
+  border: 1px solid rgba(51, 51, 51, 0.125);
+}
+
+.c-form-heading {
+  padding-bottom: 16px;
+  font-size: 22px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  border-bottom: 1px solid rgba(51, 51, 51, 0.125);
+}
+
+.c-form-content {
+  padding: 48px;
+}
+
+.c-form-group {
+  margin-bottom: 16px;
+}
+
+.c-label {
+  margin-bottom: 8px;
+  padding-left: 4px;
+  border-left: 4px solid #f9e13f;
+}
+
+.c-form-input {
+  display: block;
+  width: 100%;
+  height: calc(1.6em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  border: 1px solid rgba(51, 51, 51, 0.125);
+  border-radius: 3px;
+  background: #e9eeefa6;
+}
+
+.c-form-btn-wrapper {
+  margin-top: 32px;
+}
+
+.c-btn {
+  width: 100%;
+  padding: 6px 12px;
+  text-align: center;
+  color: #FFF;
+  background: #f6a443;
+  border-radius: 3px;
+}
+.c-btn:hover {
+  background: #f4911c;
+}
+
+.c-form-link {
+  display: inline-block;
+  margin-top: 8px;
+  font-size: 14px;
+  color: #0075b1;
+}
+.c-form-link:hover {
+  color: #0075b1 !important;
+  text-decoration: underline;
 }
