--- a/backend/resources/sass/app_only_content.scss
+++ b/backend/resources/sass/app_only_content.scss
@@ -1,10 +1,13 @@
+@import "./variables";
+
 .app-only-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 96px;
-  background: #F2F6F6;
-}
-.app-only-container .icon-img {
-  width: 240px;
+  background: $bgColor;
+
+  .icon-img {
+    width: 240px;
+  }
 }
