feat/spending view

--- a/backend/resources/css/reset.css
+++ b/backend/resources/css/reset.css
@@ -141,7 +141,7 @@ address {
 
 a {
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: none !important ;
   color: inherit;
 }
 a:hover {
