--- a/backend/resources/sass/_variables.scss
+++ b/backend/resources/sass/_variables.scss
@@ -14,8 +14,10 @@ $blue: #0075b1;
 $bgColor: #F2F6F6;
 $white: #FFF;
 $gray: #e9eeefa6;
+$red: #F34C88;
 
 // Fonts size
 $heading: 22px;
+$headingWeight: 500;
 
 $outline: 1px solid rgba(51, 51, 51, 0.125);
