--- a/backend/resources/sass/master.scss
+++ b/backend/resources/sass/master.scss
@@ -63,3 +63,67 @@
     text-decoration: underline;
   }
 }
+
+.c-list-content {
+  width: calc(100% - 40px);
+  max-width: 1000px;
+  height: fit-content;
+  padding: 40px 80px;
+  border-radius: 3px;
+  background: $white;
+  border: $outline;
+}
+
+.c-list-content-title {
+  font-size: $heading;
+  text-align: center;
+  font-weight: $headingWeight;
+}
+
+table
+{
+  width: 100%;
+  margin-top: 40px;
+  border-collapse: collapse;
+}
+
+table th
+{
+  padding: 6px 0;
+  text-align: center;
+}
+
+table th:not(:last-child)
+{
+  border-right: dashed 1px $orange;
+}
+
+table td {
+  padding: 6px 0;
+  border-top: dashed 1px $orange;
+}
+
+table td:first-child {
+  padding-left: 12px;
+}
+
+table td:last-child {
+  padding-top: 5px;
+}
+
+table td:not(:first-child) {
+  text-align: center;
+  border-left: dashed 1px $orange;
+}
+
+.table-link {
+  &.edit {
+    color: $blue;
+  }
+  &.delete {
+    color: $red;
+  }
+  &:hover {
+    text-decoration: underline !important;
+  }
+}
