--- a/backend/resources/sass/spendings/index.scss
+++ b/backend/resources/sass/spendings/index.scss
@@ -95,6 +95,11 @@
     padding: 3px 6px;
     background-color: #E9EEEF;
     border-radius: 4px;
+
+      &.select {
+        min-width: 200px;
+      }
+
   }
 
   .search-form-btn {
