--- a/backend/public/css/master.css
+++ b/backend/public/css/master.css
@@ -1,6 +1,7 @@
 .c-form {
   padding: 20px;
-  width: 500px;
+  width: calc(100% - 40px);
+  max-width: 500px;
   border-radius: 3px;
   background: #FFF;
   border: 1px solid rgba(51, 51, 51, 0.125);
@@ -10,7 +11,7 @@
   padding-bottom: 16px;
   font-size: 22px;
   text-align: center;
-  font-weight: bold;
+  font-weight: 600;
   letter-spacing: 0.1em;
   border-bottom: 1px solid rgba(51, 51, 51, 0.125);
 }
@@ -65,6 +66,26 @@
 .c-form-link:hover {
   color: #0075b1 !important;
   text-decoration: underline;
+}
+
+.c-prev-and-title-wrapper {
+  position: relative;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.c-prev-link {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+}
+
+.c-prev-link-img {
+  height: 22px;
+  width: 22px;
 }
 
 .c-list-content {
