--- a/backend/resources/sass/master.scss
+++ b/backend/resources/sass/master.scss
@@ -3,7 +3,8 @@
 // common css
 .c-form {
   padding: 20px;
-  width: 500px;
+  width: calc(100% - 40px);
+  max-width: 500px;
   border-radius: 3px;
   background: $white;
   border: $outline;
@@ -12,7 +13,7 @@
   padding-bottom: 16px;
   font-size: $heading;
   text-align: center;
-  font-weight: bold;
+  font-weight: 600;
   letter-spacing: 0.1em;
   border-bottom: $outline;
 }
@@ -62,6 +63,24 @@
     color: $blue !important;
     text-decoration: underline;
   }
+}
+.c-prev-and-title-wrapper {
+  position: relative;
+  text-align: center;
+  font-size: $heading;
+  font-weight: 500;
+}
+.c-prev-link {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+}
+
+.c-prev-link-img {
+  height: 22px;
+  width: 22px;
 }
 
 .c-list-content {
@@ -127,3 +146,5 @@ table td:not(:first-child) {
     text-decoration: underline !important;
   }
 }
+
+
