feat category view

--- a/backend/resources/sass/components.scss
+++ b/backend/resources/sass/components.scss
@@ -2,4 +2,6 @@
 @import "app_content.scss";
 @import "login.scss";
 @import "header.scss";
+@import "top.scss";
 @import "spendings/index.scss";
+@import "categories/index.scss";
