--- a/backend/public/css/components.css
+++ b/backend/public/css/components.css
@@ -65,6 +65,41 @@
   color: #666666;
 }
 
+.top-container .search-section {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 24px auto 24px;
+}
+.top-container .search-section-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 350px;
+}
+.top-container .search-section-label {
+  display: flex;
+  align-items: center;
+  width: 70%;
+  margin-bottom: 0;
+}
+.top-container .top-select {
+  width: 70%;
+  padding: 2px 16px;
+  margin: 0 6px 0 0;
+}
+.top-container .top-search-txt {
+  white-space: nowrap;
+}
+.top-container .top-btn-wrapper {
+  width: 22%;
+}
+.top-container table td:first-child {
+  padding-left: 0;
+  text-align: center;
+}
+
 /**
 * 支出一覧
 */
@@ -159,4 +194,40 @@
   margin-left: 8px;
   padding: 0 12px;
   font-size: 12px;
+}
+
+.category-container .create-category-section {
+  width: 50%;
+  max-width: 380px;
+  min-width: 280px;
+  margin: 20px auto 0;
+}
+.category-container .create-category-form {
+  display: flex;
+  align-items: flex-end;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.category-container .create-category-form-wrapper {
+  width: 100%;
+  margin-bottom: 0;
+}
+.category-container .create-category-form-label {
+  display: inline-block;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+.category-container .create-category-form-input {
+  border-radius: 3px 0 0 3px;
+}
+.category-container .create-category-form-btn {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 37px;
+  padding: 6px 12px;
+  font-size: 14px;
+  white-space: nowrap;
+  border-radius: 0 4px 4px 0;
 }
