--- a/backend/resources/sass/master.scss
+++ b/backend/resources/sass/master.scss
@@ -104,35 +104,32 @@ table
   width: 100%;
   margin-top: 40px;
   border-collapse: collapse;
-}
 
-table th
-{
-  padding: 6px 0;
-  text-align: center;
-}
+  th
+  {
+    padding: 6px 0;
+    text-align: center;
 
-table th:not(:last-child)
-{
-  border-right: dashed 1px $orange;
-}
+    &:not(:last-child) {
+      border-right: dashed 1px $orange;
+    }
+  }
 
-table td {
-  padding: 6px 0;
-  border-top: dashed 1px $orange;
-}
+  td {
+    padding: 6px 0;
+    border-top: dashed 1px $orange;
 
-table td:first-child {
-  padding-left: 12px;
-}
-
-table td:last-child {
-  padding-top: 5px;
-}
-
-table td:not(:first-child) {
-  text-align: center;
-  border-left: dashed 1px $orange;
+    &:first-child {
+      padding-left: 12px;
+    }
+    &:last-child {
+      padding-top: 5px;
+    }
+    &:not(:first-child) {
+      text-align: center;
+      border-left: dashed 1px $orange;
+    }
+  }
 }
 
 .table-link {
