--- a/backend/public/css/components.css
+++ b/backend/public/css/components.css
@@ -202,16 +202,13 @@
   min-width: 280px;
   margin: 20px auto 0;
 }
-.category-container .create-category-form {
+.category-container .category-form-left {
   display: flex;
-  align-items: flex-end;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  flex-direction: column;
+  width: calc(100% - 52px);
 }
-.category-container .create-category-form-wrapper {
-  width: 100%;
-  margin-bottom: 0;
+.category-container .form-wrapper {
+  display: flex;
 }
 .category-container .create-category-form-label {
   display: inline-block;
@@ -230,4 +227,7 @@
   font-size: 14px;
   white-space: nowrap;
   border-radius: 0 4px 4px 0;
+}
+.category-container .category-table-wrapper {
+  padding: 0px 60px 20px;
 }
