--- a/backend/resources/sass/components.scss
+++ b/backend/resources/sass/components.scss
@@ -6,3 +6,4 @@
 @import "spendings/index.scss";
 @import "categories/index.scss";
 @import "incomes/index.scss";
+@import "incomeSources/index.scss";
